# raytracer-server

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml  image.ppm  render_examples.sh
app/: App.module.scss  index.html  index.tsx  package-lock.json  package.json  theme.ts
scenes/: cornell_box.toml  cubes.toml  flying_unicorn.toml
src/: README.md  body.rs  config.rs  geometry.rs  main.rs  octree.rs  ppm.rs  scene.rs  server.rs  util.rs  vec3.rs
test-client/: app.tsx  index.html  package-lock.json  package.json
ws-client/: main.js  package-lock.json  package.json
