[package]
name = "raytracer-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.5"
rayon = "1.7"
pixels = "0.12.1"
winit = "0.28"
winit_input_helper = "0.14"
toml = "0.7.4"
serde = { version = "1.0", features = ["derive"] }